--- a/about.html
+++ b/about.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Services</title>
+<title>About</title>
 </head>
 <body>
-<h1>Our Services</h1>
-<p>This is the services page.</p>
+<h1>About Us</h1>
+<p>This is the about page.</p>
 <a href="index.html">Home</a>
 </body>
 </html>
