Added contact page feature

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 <h1>Our Services</h1>
 <p>This is the services page.</p>
 <a href="index.html">Home</a>
+<a href="contact.html">Contact</a>
+
 </body>
 </html>
